--- a/specialPages/combine/combine.html
+++ b/specialPages/combine/combine.html
@@ -1,7 +1,7 @@
 ---
 layout: nothingPage
 title: Airspace
-permalink: /combine/
+permalink: /combine/en/
 ---
 
 <head>
@@ -12,19 +12,23 @@ permalink: /combine/
 </head>
 
 <body>
-  <nav class="main-nav">
-    <div class="brand-title">Fatih Kavum</div>
-    <a class="hamburger-button" name="hamburger-button">
-      <span class="hamburger-button-line"></span>
-      <span class="hamburger-button-line"></span>
-      <span class="hamburger-button-line"></span>
-    </a>
-    <div class="navbar-tabs">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+  <nav class="main-nav row">
+    <div class="col-6">
+      <div class="brand-title">Fatih Kavum</div>
+      <a class="hamburger-button" name="hamburger-button">
+        <span class="hamburger-button-line"></span>
+        <span class="hamburger-button-line"></span>
+        <span class="hamburger-button-line"></span>
+      </a>
+    </div>
+    <div class="col-6">
+      <div class="navbar-tabs">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
